# CursorBuddy

./: .gitignore  DEPLOYMENT.md  README.md  build.bat  build_hotkey_app.bat  format_hotkey.ahk  ideia.md  pyproject.toml  requirements.txt  run.bat  run_hotkey_config.bat  setup.py  test_ollama.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  OLLAMA_GUIDE.md  SDD.md
examples/: basic_loop.py  ollama_local.py
scripts/: format_hotkey.ahk
src/sentinel/: __init__.py  cli.py  format_panel.py  hotkey_config.py
src/sentinel/core/: __init__.py  base.py  loop.py  types.py
src/sentinel/llm/: __init__.py  local.py  provider.py
src/sentinel/modules/: __init__.py  context.py  execution.py  memory.py  perception.py  planning.py  reflection.py
tests/: conftest.py  test_loop.py
